--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-moment": "^1.1.1",
     "react-number-format": "^4.7.3",
     "react-router-dom": "^6.0.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-search-autocomplete": "^5.4.4",
     "react-select": "^5.2.1",
     "react-share-social": "^0.1.48",
@@ -52,7 +52,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false && react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
