--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": ">=14.4.0 <15"
-  },
+  "engines": { "node": ">=14.0.0" },
   "dependencies": {
     "@apollo/client": "^3.4.16",
     "@emotion/react": "^11.8.1",
