--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-content-loader": "^6.0.3",
     "react-copy-to-clipboard": "^5.0.4",
     "react-countdown": "^2.3.2",
+    "react-currency-format": "^1.1.0",
     "react-data-table-component": "^7.4.5",
     "react-data-table-component-extensions": "^1.5.2",
     "react-dom": "^17.0.2",
@@ -33,7 +34,7 @@
     "react-loader-spinner": "^5.1.4",
     "react-modal": "^3.14.3",
     "react-moment": "^1.1.1",
-    "react-number-format": "^4.7.3",
+    "react-number-format": "^4.9.4",
     "react-router-dom": "^6.0.1",
     "react-scripts": "^4.0.3",
     "react-search-autocomplete": "^5.4.4",
