--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.4.16",
+    "@apollo/client": "^3.8.6",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@ethersproject/address": "^5.5.0",
@@ -15,6 +15,7 @@
     "bootstrap": "^5.2.0",
     "cra-template": "1.1.2",
     "emoji-picker-react": "^3.5.1",
+    "graphql": "^16.8.1",
     "ipfs-http-client": "^56.0.1",
     "ipfs-utils": "^9.0.5",
     "isomorphic-ws": "^4.0.1",
